Quick fixes closes #1

--- a/projects/ui-workbench/src/modules/header/header-component/header-component.component.scss
+++ b/projects/ui-workbench/src/modules/header/header-component/header-component.component.scss
@@ -6,8 +6,8 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  background-color: bisque;
-  box-shadow: 0 2px 32px rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 228, 196, 1);
+  box-shadow: 0 22px 88px rgba(0, 0, 0, 0.2);
 }
 
 .leftSide {
