Fix footer and created breadcrumb closes #3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <doejohn-header-component></doejohn-header-component>
+<doejohn-breadcrumb></doejohn-breadcrumb>
+<router-outlet></router-outlet>
 <doejohn-footer-component></doejohn-footer-component>
