NOT FOUND page closes #11

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <doejohn-breadcrumb></doejohn-breadcrumb>
+<doejohn-error-view></doejohn-error-view>
 <router-outlet> </router-outlet>
 <doejohn-footer-component></doejohn-footer-component>
