--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+//Variables:
+// Colors:
+$color-black: #000000;
+$color-white: #FFFFFF;
+$color-vueling-grey: #4D4D4D;
+$color-vueling-primary: #FFCC00;
+$font-family-default: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
+
+body {
+  margin: 0px;
+}
