--- a/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
+++ b/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
@@ -1,54 +1,43 @@
 <div class="footer-background">
   <div class="icons">
-    <li class="linkedin">
-      <a
-        href="https://www.linkedin.com/in/sergijim/"
-        target="_blank"
-        title="Linkedin"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-linkedin"
-        >
-          <path
-            d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
-          ></path>
-          <rect x="2" y="9" width="4" height="12"></rect>
-          <circle cx="4" cy="4" r="2"></circle>
-        </svg>
-      </a>
-    </li>
-    <li class="item_link_footer">
-      <a href="https://github.com/sergiJimenez" target="_blank" title="github">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-github"
-        >
-          <path
-            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
-          ></path>
-        </svg>
-      </a>
-    </li>
+    <a
+      href="https://www.linkedin.com/in/sergijim/"
+      target="_blank"
+      title="Linkedin"
+      class="linkedin"
+    >
+      <svg height="32px" viewBox="0 0 32 32" width="32px">
+        <g>
+          <g>
+            <rect height="14" width="4" x="7" y="11" />
+            <path
+              d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z"
+            />
+            <circle cx="9" cy="8" r="2" />
+          </g>
+        </g>
+      </svg>
+    </a>
+
+    <a
+      href="https://github.com/sergiJimenez"
+      target="_blank"
+      title="GitHub"
+      class="github"
+    >
+      <svg width="32" height="32" viewBox="0 0 24 24">
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"
+        ></path>
+      </svg>
+    </a>
   </div>
   <div class="texts">
-    <div class="name">© 2023 Copyright: <span class="nameEffect">Sergi Pérez Jiménez</span></div>
+    <div class="name">
+      © 2023 Copyright: <span class="nameEffect">Sergi Pérez Jiménez</span>
+    </div>
     <div class="mail">acasualcolumbus@gmail.com</div>
   </div>
 </div>
