Publishing and last commit PHASE1

--- a/projects/ui-workbench/src/modules/error-view/error-view/error-view.component.scss
+++ b/projects/ui-workbench/src/modules/error-view/error-view/error-view.component.scss
@@ -1,4 +1,9 @@
-@import "/src/styles.scss";
+//Colors variables:
+$color-black: #000000;
+$color-white: #ffffff;
+$color-vueling-grey: #4d4d4d;
+$color-vueling-primary: #ffcc00;
+$font-family-default: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
 
 body {
   width: 100%;
