--- a/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.scss
+++ b/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.scss
@@ -1,4 +1,9 @@
-@import "/src/styles.scss";
+//Colors variables:
+$color-black: #000000;
+$color-white: #FFFFFF;
+$color-vueling-grey: #4D4D4D;
+$color-vueling-primary: #FFCC00;
+$font-family-default: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
 
 .footer-background {
   width: 100%;
