--- a/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
+++ b/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
@@ -38,6 +38,7 @@
     <div class="name">
       © 2023 Copyright: <span class="nameEffect">Sergi Pérez Jiménez</span>
     </div>
-    <div class="mail">acasualcolumbus@gmail.com</div>
+    <!-- <div class="mail">acasualcolumbus@gmail.com</div> -->
+    <div class="mail">Fecha actual: 12/04/2023</div>
   </div>
 </div>
