--- a/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
+++ b/projects/ui-workbench/src/modules/footer/footer-component/footer-component.component.html
@@ -39,6 +39,8 @@
       © 2023 Copyright: <span class="nameEffect">Sergi Pérez Jiménez</span>
     </div>
     <!-- <div class="mail">acasualcolumbus@gmail.com</div> -->
-    <div class="mail">Fecha actual: 12/04/2023</div>
+    <div class="date">
+      Fecha actual: <span class="dateEffect">09/05/2023</span>
+    </div>
   </div>
 </div>
